# vison

./: .claudeignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  agentic-use-cases.md  brainstorm-arch.md  cameras.json  docker-compose.dev.yml  docker-compose.onboard.yml  docker-compose.yml  handoff-612156.md  project-context.md
.claude/: settings.json
_bmad-output/_progress/: 00-design-log.md  kanban-2026-05-30.md  kanban-2026-06-14.md  scenario-01-validation-report-2026-05-14.md  scenario-02-validation-report-2026-05-14.md  scenario-02b-validation-report-2026-05-14.md  scenario-02c-validation-report-2026-05-14.md  scenario-02d-validation-report-2026-05-14.md  scenario-03-validation-report-2026-05-14.md  scenario-04-validation-report-2026-05-14.md  scenario-05-validation-report-2026-05-14.md  scenario-06-validation-report-2026-05-14.md  scenario-10-validation-report-2026-05-14.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-23-1.md
brain-dump/: brainstorm-brain.md
claude-design-mockups/: README.md  SKILL.md
cloud-backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
cloud-sync/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
cloud-sync/src/cloud_sync/: __init__.py  ack_loop.py  config.py  db.py  event_store_client.py  health.py  main.py  mqtt_client.py  pull_loop.py  schema.sql
cloud-sync/tests/: _fakebroker.py  conftest.py
cloud-sync/tests/contract/: test_topic_format.py
cloud-sync/tests/integration/: test_offline_queue_accumulation.py  test_ordered_flush.py  test_sync_cursor_ack.py
cloud-sync/tests/unit/: test_ack_loop.py  test_config.py  test_db.py  test_event_store_client.py  test_health.py  test_health_extras.py  test_malformed_envelope.py  test_publish_error.py  test_pull_loop.py  test_rate_limit.py  test_security.py  test_topic.py  test_topic_extras.py
control-centre/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
docs/: Nomad-Hailo-AI.html
event-store/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml  schema.sql
event-store/src/event_store/: auth.py  config.py  database.py  deps.py  egress_privacy.py  exceptions.py  main.py  models.py  schema.sql
event-store/src/event_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
event-store/src/event_store/routes/: events.py  health.py  journeys.py  sync.py
event-store/src/event_store/sync/: cursor.py
event-store/src/event_store/websocket/: broadcaster.py  handler.py  replay.py
event-store/tests/: conftest.py
event-store/tests/contract/: test_schema_version.py
event-store/tests/integration/: test_egress_anonymisation.py  test_event_store_concurrent_writes.py  test_event_store_db.py  test_sync_cursor.py  test_websocket_fanout.py  test_websocket_replay.py
event-store/tests/unit/: test_auth.py  test_broadcaster.py  test_cursor_pagination.py  test_events_route.py  test_journeys_route.py  test_min_severity_filter.py  test_sync_cursor_route.py  test_ws_subscription_filter.py
fusion/: .env.example  CLAUDE.md  Dockerfile  pyproject.toml
inference/: CLAUDE.md  Dockerfile  pyproject.toml
mockups/: analytics-station-v1.html  bistro-app-v1.html  conductor-app-light.html  conductor-app-v1.html  conductor-app-v2.html  control-centre-dashboard-dark.html  control-centre-dashboard-light.html  control-centre-v1.html  control-centre-v2.html  driver-display-v1.html  driver-display-v2.html  maintenance-dashboard-v1.html  maintenance-dashboard-v2.html  passenger-portal-v1.html  technician-app-v1.html  user-roles.html  ux-structure.html
rtsp-ingest/: .coverage  CLAUDE.md  Dockerfile  pyproject.toml
rtsp-ingest/src/rtsp_ingest/: config.py  gate.py  health.py  main.py  models.py  pipeline.py  scheduler.py
rtsp-ingest/src/rtsp_ingest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rtsp-ingest/tests/unit/: test_gate.py  test_health.py  test_models.py  test_pipeline_events.py  test_scheduler.py  test_security.py
scripts/: smoke-test-onboard.sh
shared/: CLAUDE.md  pyproject.toml
shared/src/oebb_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/src/oebb_shared/adapters/apc/: __init__.py  adapter.py  mock.py
shared/src/oebb_shared/adapters/pis/: base.py  mock.py
shared/src/oebb_shared/events/: __init__.py  anonymise.py  envelope.py  payloads.py  types.py
shared/src/oebb_shared/http/: retry.py
shared/src/oebb_shared/ws/: subscription.py
shared/tests/contract/: test_alert_raised_compat.py  test_anonymise.py  test_envelope_contract.py  test_inference_heartbeat.py
shared/tests/unit/: test_apc_adapter.py  test_event_envelope.py  test_journey_id.py
vlan-pollers/: .coverage  .env.example  CLAUDE.md  Dockerfile  pyproject.toml
(+534 files in other folders)
