[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-sync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "aiomqtt>=2.0,<3.0",
    "oebb-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cloud_sync = ["*.sql"]

[tool.pytest.ini_options]
addopts = "--tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: pure logic, no I/O",
    "integration: cross-module with in-process fake broker / fake event-store",
    "contract: payload-shape compatibility with sibling containers",
]
filterwarnings = [
    # httpx.AsyncClient instantiated outside an event loop for FastAPI TestClient
    # use; the transport is owned by TestClient. Safe to ignore the close warning.
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src/cloud_sync"]
omit = ["*/main.py"]

[tool.coverage.report]
fail_under = 90

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "DTZ", "RUF", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
