[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsp-ingest"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "anyio>=4.4",
    "mypy>=1.10",
    "ruff>=0.4",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: pure logic, no I/O",
    "integration: real adapters",
    "anyio: anyio async tests",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["rtsp_ingest"]
omit = ["*/main.py", "*/pipeline.py"]

[tool.coverage.report]
fail_under = 90
omit = ["*/main.py", "*/pipeline.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
strict = true
